Added about and contact pages. Also added them to Layout Nav bar.

--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -25,8 +25,7 @@ body {
 /*Added CSS*/
 .bg-dark {
     background: linear-gradient(90deg, rgba(74, 4, 4, 1) 0%, rgba(128, 0, 0, 1) 55%);
-}
-/*This class is for the background colors in the header*/
+}/*This class is for the background colors in the header*/
 
 .header {
     margin: 0px;
