Added conent to contact page, does not send form content anywhere.

--- a/SDG.SpookyWisconsin.WebUI/Views/Home/Contact.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/Contact.cshtml
@@ -3,4 +3,36 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's contact page.</p>
+<p>Please fill out the form below and one of our associates will respond within 1 to 2 business days.</p>
+
+<form action="">
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label" for="fname">First name:</label>
+        <div class="col-sm-10">
+            <input type="text" id="fname" name="fname" placeholder="John">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label" for="lname">Last name:</label>
+        <div class="col-sm-10">
+            <input type="text" id="lname" name="lname" placeholder="Doe">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label" for="email">Email Address:</label>
+        <div class="col-sm-10">
+            <input type="text" id="email" name="email" placeholder="johndoe@email.com">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label" for="message">Message:</label>
+        <div class="col-sm-10">
+            <input type="text" id="message" name="message" size="75" placeholder="Please add your message here.">
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <input type="submit" value="Submit">
+        </div>
+    </div>
+</form> 
