--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Delete.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model SDG.SpookyWisconsin.BL.Models.HauntedLocation
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
-
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <dl class="row">
         <dt class="col-sm-2">
@@ -16,8 +16,9 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.Id }) |
-    <a asp-action="Index">Back to List</a>
+
+    <form asp-action="Delete">
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
