--- a/SDG.SpookyWisconsin.WebUI/Views/Tour/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tour/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SDG.SpookyWisconsin.BL.Models.HauntedLocation>
+﻿@model IEnumerable<SDG.SpookyWisconsin.BL.Models.Tour>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.TourName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
             </th>
             <th></th>
         </tr>
@@ -23,7 +26,10 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name)
+                    @Html.DisplayFor(modelItem => item.TourName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
