--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Create.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Create.cshtml
@@ -10,6 +10,23 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @* <div class="form-group">
+                <label asp-for="HauntedEvent.HauntedLocationName" class="control-label"></label>
+                <select asp-for="HauntedEvent.HauntedLocationId" class="form-control"
+                        asp-items="@(new SelectList(Models.HauntedLocation, "Id", "Name"))"></select>
+                <span asp-validation-for="HauntedEvent.HauntedLocationId" class="text-danger"></span>
+            </div> *@
+            @* <div class="form-group">
+            <label asp-for="HauntedEvent.ParticipantName" class="control-label"></label>
+            <select asp-for="HauntedEvent.ParticipantId" class="form-control"
+            asp-items="@(new SelectList(Models.Participant, "Id", "Name"))"></select>
+            <span asp-validation-for="HauntedEvent.ParticipantId" class="text-danger"></span>
+            </div> *@
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
                 <input asp-for="Date" class="form-control" />
@@ -20,6 +37,12 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+            @* <div class="form-group">
+                <label asp-for="HauntedEvent.ImagePath" class="control-label"></label>
+                <input asp-for="HauntedEvent.ImagePath" class="form-control" />
+                <input type="file" name="File" id="File" accept="image/" onchange="loadFile(event)" />
+                <span asp-validation-for="HauntedEvent.ImagePath" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
