--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Delete.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Delete.cshtml
@@ -10,6 +10,12 @@
 <div>
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd class="col-sm-10">
@@ -20,6 +26,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ImagePath)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ImagePath)
         </dd>
     </dl>
 
