--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Create.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Create.cshtml
@@ -10,11 +10,23 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @* <div class="form-group">
+            <label asp-for="HauntedLocation.AddressName" class="control-label"></label>
+            <select asp-for="HauntedLocation.AddressId" class="form-control"
+            asp-items="@(new SelectList(Models.Address, "Id", "Name"))"></select>
+            <span asp-validation-for="HauntedLocation.AddressId" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            @* <div class="form-group">
+            <label asp-for="HauntedLocation.ImagePath" class="control-label"></label>
+            <input asp-for="HauntedLocation.ImagePath" class="form-control" />
+            <input type="file" name="File" id="File" accept="image/" onchange="loadFile(event)" />
+            <span asp-validation-for="HauntedLocation.ImagePath" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
