--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Delete.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Delete.cshtml
@@ -15,6 +15,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ImagePath)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ImagePath)
+        </dd>
     </dl>
 
     <form asp-action="Delete">
