--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Edit.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/Edit.cshtml
@@ -12,11 +12,23 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input hidden asp-for="Id" class="form-control" />
             <input hidden asp-for="AddressId" class="form-control" />
+            @*  <div class="form-group">
+            <label asp-for="HauntedLocation.AddressName" class="control-label"></label>
+            <select asp-for="HauntedLocation.AddressId" class="form-control"
+            asp-items="@(new SelectList(Model.Address, "Id", "Name"))"></select>
+            <span asp-validation-for="HauntedLocation.AddressId" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            @* <div class="form-group">
+            <label asp-for="HauntedLocation.ImagePath" class="control-label"></label>
+            <input asp-for="HauntedLocation.ImagePath" class="form-control" />
+            <input type="file" name="File" id="File" accept="image/" onchange="loadFile(event)" />
+            <span asp-validation-for="HauntedLocation.ImagePath" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
