--- a/SDG.SpookyWisconsin.WebUI/Views/Tour/Create.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tour/Create.cshtml
@@ -10,6 +10,12 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @* <div class="form-group">
+            <label asp-for="Tour.HauntedLocationName" class="control-label"></label>
+            <select asp-for="Tour.HauntedLocationId" class="form-control"
+            asp-items="@(new SelectList(Models.HauntedLocation, "Id", "Name"))"></select>
+            <span asp-validation-for="Tour.HauntedLocationId" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <label asp-for="TourName" class="control-label"></label>
                 <input asp-for="TourName" class="form-control" />
