--- a/SDG.SpookyWisconsin.WebUI/Views/Tour/Edit.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tour/Edit.cshtml
@@ -12,6 +12,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input hidden asp-for="Id" class="form-control" />
             <input hidden asp-for="HauntedLocationId" class="form-control" />
+            @*  <div class="form-group">
+            <label asp-for="Tour.HauntedLocationName" class="control-label"></label>
+            <select asp-for="Tour.HauntedLocationId" class="form-control"
+            asp-items="@(new SelectList(Model.HauntedLocation, "Id", "Name"))"></select>
+            <span asp-validation-for="Tour.HauntedLocationId" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <label asp-for="TourName" class="control-label"></label>
                 <input asp-for="TourName" class="form-control" />
