Added content to about page, added logo to header

--- a/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
@@ -1,6 +1,88 @@
 ﻿@{
     ViewData["Title"] = "About Us";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>@ViewData["Title"]</h1>
+@* <h1>@ViewData["Title"]</h1> *@
+<section>
+    <h1>Who are We?</h1>
+    <p>
+        Spooky Wisconsin is the perfect stop for all your haunted needs. We have plenty of haunted locations from every corner of Wisconsin. We also have a newsletter that explains events hosted at these locations, offers deals on tours, and advertises new merch in our online store.
+    </p>
+</section>
 
-<p>Use this page to detail your site's about page.</p>
+<div class="card-group">
+    <div class="card">
+        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <div class="card-body">
+            <h5 class="card-title">Member Name</h5>
+            <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+            </p>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Favorite Site:</small>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <div class="card-body">
+            <h5 class="card-title">Member Name</h5>
+            <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+            </p>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Favorite Site:</small>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <div class="card-body">
+            <h5 class="card-title">Member Name</h5>
+            <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+            </p>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Favorite Site:</small>
+        </div>
+    </div>
+</div>
+<div class="card-group">
+    <div class="card">
+        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <div class="card-body">
+            <h5 class="card-title">Member Name</h5>
+            <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+            </p>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Favorite Site:</small>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <div class="card-body">
+            <h5 class="card-title">Member Name</h5>
+            <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+            </p>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Favorite Site:</small>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <div class="card-body">
+            <h5 class="card-title">Member Name</h5>
+            <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+            </p>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Favorite Site:</small>
+        </div>
+    </div>
+</div>
