--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -24,7 +24,7 @@ body {
 
 /*Added CSS*/
 .bg-dark {
-    background: linear-gradient(90deg, rgba(74, 4, 4, 1) 0%, rgba(128, 0, 0, 1) 55%);
+    background: linear-gradient(90deg, rgba(23,19,18,255) 35%, rgba(128, 0, 0, 1) /*55%*/);
 }/*This class is for the background colors in the header*/
 
 .header {
