--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-black border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/logosm.jpeg" alt="Logo" height="75px" width="75px"></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/logosw.png" alt="Logo" height="85px" width="85px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,8 +23,34 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="HauntedLocation" asp-action="Index">Locations</a>
+                        <li class="dropdown nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="HauntedLocation" asp-action="Index">Locations</a>
+                                <div class="dropdown-options overflow-scroll bg-black">
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AlRinglingMuseum">Al Ringling Museum</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AmbassadorHotel">Ambassador Hotel</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="BloodyBrideBridge">Bloody Bride Bridge</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="BoyScoutLane">Boy Scout Lane</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="BlackRiverFalls">City of Black River Falls</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="ClarkCountyInsaneAsylum">Clark County Insane Asylum</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="DartfordCemetery">Dartford Cemetery</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="ForestHillCemetery">Forest Hill Cemetery</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="GrandOperaHouse">The Grand Opera House</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="HotelHell">Hotel Hell</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="MorrisPrattInstitute">Morris Pratt Institute</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="NelsenHall">Nelsen's Hall</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="OctagonHouse">Octagon House</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="OldBarabooInn">Old Baraboo Inn</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="PfisterHotel">The Pfister Hotel</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="PlainfieldCemetery">Plainfield Cemetery</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="RiversideCemetery">Riverside Cemetery</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="RiversideTheater">Riverside Theater</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="SanatoriumHill">Sanatorium Hill</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="SirenBridge">Siren Bridge</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="SummerwindMansion">Summerwind Mansion</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="WinnebagoMentalHealthInstitute">Winnebago Mental Health Institute</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="WitchRoad">Witch Road</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="WoodCountyInsaneAsylum">Wood County Insane Asylum</a> <br />
+                                </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Member" asp-action="Index">Membership</a>
@@ -52,8 +78,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="border-top footer text-muted bg-black">
+        <div class="container text-light">
             &copy; 2023 - FVTC Scooby Doo Gang - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
