--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -34,6 +34,34 @@ body {
     background-color: rgba(136, 8, 8,1);
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+}
+
+/*Dropdown Menu*/
+.dropdown {
+    position: relative;
+}
+
+.dropdown-options{
+    display: none;
+    padding-left:5px;
+    height: 300px;
+    width: 210px;
+    font-size: 12px;
+    position: absolute;
+    /*overflow: auto;*/
+}
+
+.dropdown:hover .dropdown-options {
+    display: block;
+}
+
 .main {
     margin: 0px;
     padding: 0px;
@@ -91,5 +119,7 @@ body {
     z-index: 2;
     cursor: pointer;
 } /*This ID is for a window that will let users click on pictures to see them better*/
+
+
 
 
