Added text to the locations. Added Kathy image. Added icon for title for layout page. Added css to make dropdown menu and carousel.

--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/ClarkCountyInsaneAsylum.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/ClarkCountyInsaneAsylum.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Clark County Insane Asylum";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Clark County Insane Asylum</h2>
+    <h4>Owen - Clark County</h4>
+    <p>Located in Owen, Wisconsin, an asylum built in 1922 held 316 patients claiming to provide humane treatments but in reality, it was far from it. From electrotherapy to ice water submersions, it's no wonder people have reported hearing voices and seeing apparitions. A group of ghost hunters even captured audio from their recording of whispers and muttering pleading for help, it is also believed that a former asylum worker committed suicide on the premises. </p>
+</div>
