--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/DartfordCemetery.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/DartfordCemetery.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Dartford Cemetery";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Dartford Cemetery</h2>
+    <h4>Green Lake - Green Lake County</h4>
+    <p>Located in Idyllic Green Lake, Dartford Cemetery is a resting place as old as time. Being the burial grounds for Chief Highknocker and many children who passed to diseases it's no wonder this cemetery is ranked in the top 10 most haunted cemeteries in Wisconsin. Dartford Cemetery was also featured in the 2007 episode of Discovery Channel series A Haunting, chilling stories told by teenagers who explored the cemetery at night, they say if you sit on top of a particular mausoleum on Halloween night, a ghost will push you off.  </p>
+</div>
