--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/GrandOperaHouse.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/GrandOperaHouse.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Grand Opera House";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Grand Opera House</h2>
+    <h4>Oshkosh - Winnebago County</h4>
+    <p>The Grand Opera House in Oshkosh is a location that is said to have been haunted for many years, and there have been multiple reports of supernatural sightings throughout the years. A few of the stories shared surrounding the opera house tell of a woman who never made it to the opening night for her performance, a former stage manager who still haunts the opera, and a small child. </p>
+</div>
