--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/WitchRoad.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/WitchRoad.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Witch Road";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Witch Road</h2>
+    <h4>Ripon - Fond Du Lac County</h4>
+    <p>Callen road, also known as Witch Road by locals has earned its name from the legends of an evil old witch who lived in an old house in the woods next to the road. Since her death she has been haunting the witch road by strange lights, chilling atmospheres, and creating apparitions.  It is said that you can even see the witches face in the woods, some have claimed to see a young little girl in the trees as well, trying to escape from the clutches of the witch... </p>
+</div>
