--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/WoodCountyInsaneAsylum.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/WoodCountyInsaneAsylum.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Wood County Insane Asylum";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Wood County Insane Asylum</h2>
+    <h4>Marshfield - Wood County</h4>
+    <p>Located in Marshfield, the Wood County Insane Asylum is said to be one of the most haunted buildings in the state by residents in the area. There have been many sightings of spirits and paranormal activity in Asylum. One area that gets a lot of attention from locals is the tunnel that used to be used to link the main building to a farm. The tunnel is supposedly haunted by the spirits of those who died there. It was demolished and is the site for the Marshfield Scrap Company. The farm and the surrounding area were worked on by the patients from the asylum. </p>
+</div>
