--- a/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
@@ -12,7 +12,7 @@
 
 <div class="card-group">
     <div class="card">
-        <img class="card-img-top" src="~/images/abbyhead.png" alt="placeholder image">
+        <img class="card-img-top" src="~/images/abbyhead.png" alt="Photo of Abigail Thompson">
         <div class="card-body">
             <h5 class="card-title">Abigail Thompson</h5>
             <p class="card-text">
@@ -50,7 +50,7 @@
 </div>
 <div class="card-group">
     <div class="card">
-        <img class="card-img-top" src="~/images/crystalhead.png" alt="placeholder image">
+        <img class="card-img-top" src="~/images/crystalhead.png" alt="Photo of Crystal Perez">
         <div class="card-body">
             <h5 class="card-title">Crystal Perez</h5>
             <p class="card-text">
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <img class="card-img-top" src="~/images/kathyhead.png" alt="Photo of Kathy Xiong">
         <div class="card-body">
             <h5 class="card-title">Kathy Xiong</h5>
             <p class="card-text">
