--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/BloodyBrideBridge.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/BloodyBrideBridge.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Bloody Bride Bridge";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Bloody Bride Bridge</h2>
+    <h4>Stevens Point - Portage County</h4>
+    <p>The bridge is in Stevens Point near Jordan Park. According to a local legend in the area, a bride was killed on the bridge in an accident on the way to her wedding which is where the name originates. As the story goes, it is said that shortly after the death of the bride, she began to wander the bridge back and forth, still wearing her bloody wedding gown. There are also reports of people saying that the bride may appear in the backseat of your cat if you look in the rearview of your mirror on the bridge. The hauntings are said to be more prevalent late at night and during the winter months. </p>
+</div>
