--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/HotelHell.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/HotelHell.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Hotel Hell";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Hotel Hell</h2>
+    <h4>Maribel - Manitowoc County</h4>
+    <p>The Maribel Caves Hotel, also known as Hotel Hell, got its name because of the disturbing rumors that surround the hotel. The building has been burned three times in its history, and each time it was burned on the same date, killing everyone in their sleep. Skeletal remains of the victims inside could still be found on the third floor and basement before the building was redone. Another incident that occurred at the hotel was a series of killings that took place within the walls of the building, where one of the hotel guests killed the guests of the hotel before killing themselves. It is said that the spirits of those who have died in the hotel linger and haunt the building. Some accounts of what happens in the hotel include feeling cold hands on your back, feeling a threatening aura in the hotel, and seeing figures outside of the second story windows.</p>
+</div>
