--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/NelsenHall.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/NelsenHall.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Nelsen Hall";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Nelsen's Hall</h2>
+    <h4>Washington - Door County</h4>
+    <p>Located in Washington Island, WI, a historic pub called Nelsen's Hall is visited by the original founder even in death. Tom Nelsen, who passed away in one of the rooms upstairs in 1960 still visits his pub especially to flirt and mingle with the ladies. To this day some women reported seeing a shadow in the corner of their eyes when entering and leaving the women's bathroom, only to see there was no one there at all. While feeling a cold breeze and sighting some apparitions here and there it is still a well-known and loved pub that many people visit, Nelsen's Hall is so popular that it was featured in the first episode of the series Haunted State.</p>
+</div>
