--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/OctagonHouse.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/OctagonHouse.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Octagon House";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Octagon House</h2>
+    <h4>Fond Du Lac - Fond du Lac County</h4>
+    <p>Built in 1956 by Issac Brown, this house was designed with the intention of hiding from his fear of one day being attacked by Native Americans because of his business. Issac created an 8-sided structure with 9 secret passageways and spaces to escape. After many years have passed no one become interested in the unique home until a local dressmaker and antique dealer named Marlene Hanson bought the house in 2005, turning the home into a spooky and historic tour house. As the tours continued many visitors reported feeling small cold hands touching them and the sounds of little children laughing and playing, some believed it was the children of Edwin Brown, Issac’s son.  </p>
+</div>
