--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/SanatoriumHill.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/SanatoriumHill.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Sanatorium Hill";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Sanatorium Hill</h2>
+    <h4>Madison - Dane County</h4>
+    <p>In 1930 this historic building was known as the tuberculosis sanatorium that isolated patients from the public, providing a supportive environment for them to recover. After years passed the building became abandoned and what remains are the mumbling voices of past patients, people have claimed to witness apparitions and even feeling someone pulling their hair. What tops the cake is the woods and cemetery nearby... </p>
+</div>
