--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/SirenBridge.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/SirenBridge.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Siren Bridge";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Siren Bridge</h2>
+    <h4>Siren - Burnett County</h4>
+    <p>Located in Siren, Wisconsin, this haunted road is said to be the home of a family who crashed while traveling in the 1980’s. Many people have reported hearing echoes of young children and adults screaming for help, some even claimed to hear a little girls voice over the radio crying for her mother... “I can’t get out” over and over again until they’ve past the bridge. </p>
+</div>
