--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/WinnebagoMentalHealthInstitute.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/WinnebagoMentalHealthInstitute.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Winnebago Mental Health Institute";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+</div>
+<div>
+    <h2>Winnebago Mental Health Institute</h2>
+    <h4>Oshkosh - Winnebago County</h4>
+    <p>The Winnebago Mental Health Institute opened in 1873 and was originally named as the Northern State Hospital for the Insane. The name was changed in 1935 to the Winnebago State Hospital and then again to the present name in 1973. Famous patients who have been treated at WMHI were John Flammang Schrank, who attempted to assassinate Theodore Roosevelt in Milwaukee, and Anissa Weier & Morgan Geyser, who were part of the Slenderman killing. There is a graveyard where unclaimed patients were laid to rest from 1873 to 1973 and can be found near Asylum Point Park. There are rumors that patients have not left the grounds after death, and some have been seen lingering in the halls.  </p>
+</div>
