--- a/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
@@ -1,3 +1,36 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="slideshow">
+    <!-- Carousel -->
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+        <!-- Indicators/dots -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
+
+        <!-- The slideshow/carousel -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/images/ghost.png" alt="Ghost" class="d-block align-content-end w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="~/images/hauntedhouse.png" alt="Haunted House" class="d-block align-content-center w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="~/images/spooky.png" alt="Jack o Lanterns" class="d-block align-content-center w-100">
+            </div>
+        </div>
+
+        <!-- Left and right controls/icons -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
+</div>
