--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -35,7 +35,7 @@ body {
 }
 
 a {
-    color: white;
+    color:white;
     text-decoration: none;
 }
 
@@ -51,7 +51,7 @@ a:hover {
 .dropdown-options{
     display: none;
     padding-left:5px;
-    height: 300px;
+    height: 170px;
     width: 210px;
     font-size: 12px;
     position: absolute;
@@ -62,10 +62,20 @@ a:hover {
     display: block;
 }
 
+.dropdown-options a:hover{
+    background-color: red;
+}
+
 .main {
     margin: 0px;
     padding: 0px;
     border: 1px solid;
+}
+
+.slideshow{
+    height:600px;
+    width:fit-content;
+    padding-left: 100px;
 }
 
 .table tr:nth-child(even) {
