--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -34,6 +34,14 @@ body {
     background-color: rgba(136, 8, 8,1);
 }
 
+nav{
+    padding-left: 275px;
+}
+
+nav li{
+    padding-left: 18px;
+}
+
 a {
     color:white;
     text-decoration: none;
@@ -51,10 +59,11 @@ a:hover {
 .dropdown-options{
     display: none;
     padding-left:5px;
-    height: 170px;
+    height: 110px;
     width: 210px;
     font-size: 12px;
     position: absolute;
+    z-index: 3;
     /*overflow: auto;*/
 }
 
