--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/PfisterHotel.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/PfisterHotel.cshtml
@@ -3,10 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/pfisterhotel1.jpg" alt="placeholder image">
 </div>
-<div>
+<div class="container">
     <h2>Pfister Hotel</h2>
     <h4>Milwaukee - Milwaukee County</h4>
+    <img class="locimageside" src="~/images/locations/pfisterhotel2.jpg" alt="placeholder image">
     <p>The Pfister Hotel is home to professional baseball and basketball teams whenever they are in town to play. Many players in the baseball league have reported paranormal activity in the building such as electrical issues, object manipulation, and seeing apparitions. One report from Adrian Beltre, a player for the L.S. Dodgers, stated that he heard a knocking at his door one night and when he went to check, no one was there. When Adrian returned to his room the air conditioning and television had switched on by themselves. </p>
 </div>
