--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/RiversideTheater.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/RiversideTheater.cshtml
@@ -3,10 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/riversidetheater1.jpg" alt="placeholder image">
 </div>
 <div>
     <h2>Riverside Theater</h2>
     <h4>Milwaukee - Milwaukee County</h4>
+    <img class="locimageside" src="~/images/locations/riversidetheater2.jpg" alt="placeholder image">
     <p>Riverside Theater in Milwaukee is known as a local hotspot for paranormal activity. Spectrum News interviewed Susan Fry who has been collecting stories about the Theater for many years now. Old of the oldest stories from the hotel and one that continues to go on today is being claiming to see a shadowy figure walking along the balcony and stage. Susan herself has reported that during one of her visits to the theater she has had items thrown at her and she’s mentioned hearing unexplainable noises such as clanging from the theater. </p>
 </div>
