--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/SanatoriumHill.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/SanatoriumHill.cshtml
@@ -3,10 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/sanatoriumhill.jpg" alt="placeholder image">
 </div>
 <div>
     <h2>Sanatorium Hill</h2>
     <h4>Madison - Dane County</h4>
+    <img class="locimageside" src="~/images/locations/sanatoriumhill2.jpg" alt="placeholder image">
     <p>In 1930 this historic building was known as the tuberculosis sanatorium that isolated patients from the public, providing a supportive environment for them to recover. After years passed the building became abandoned and what remains are the mumbling voices of past patients, people have claimed to witness apparitions and even feeling someone pulling their hair. What tops the cake is the woods and cemetery nearby... </p>
 </div>
