--- a/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                 <img src="~/images/hauntedhouse.png" alt="Haunted House" class="d-block align-content-center w-100">
             </div>
             <div class="carousel-item">
-                <img src="~/images/spooky.png" alt="Jack o Lanterns" class="d-block align-content-center w-100">
+                <img src="~/images/pumpkin.png" alt="Jack o Lanterns" class="d-block align-content-center w-100">
             </div>
         </div>
 
@@ -33,4 +33,9 @@
             <span class="carousel-control-next-icon"></span>
         </button>
     </div>
+</div>
+
+<!--Interactive Map-->
+<div>
+
 </div>
