--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="dropdown nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="HauntedLocation" asp-action="Index">Locations</a>
+                                <a class="nav-link text-light">Locations</a>
                                 <div class="dropdown-options overflow-scroll bg-black">
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AlRinglingMuseum">Al Ringling Museum</a> <br />
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AmbassadorHotel">Ambassador Hotel</a> <br />
