--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/AlRinglingMuseum.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/AlRinglingMuseum.cshtml
@@ -3,12 +3,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/alringling1.jpg" alt="placeholder image">
 </div>
 <div>
     <h2>Al Ringling Museum</h2>
     <h4>Baraboo - Sauk County</h4>
+    <img class="locimageside" src="~/images/locations/alringling2.jpg" alt="placeholder image">
     <p>The red stone mansion was built in 1905 and was home to Al. Ringling, a legendary circus showman at the time. After the passing of Al. Ringling, the mansion was abandoned for many years until being purchased and restored to its former glory. Visitors of the now restored mansion have reported seeing the ghosts of the past wandering the mansion. People have reported seeing ghosts wandering around in the mansion and sitting at the dinner tables. </p>
     
 </div>
