--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/BoyScoutLane.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/BoyScoutLane.cshtml
@@ -3,10 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/boyscoutlane1.jpg" alt="placeholder image">
 </div>
 <div>
     <h2>Boy Scout Lane</h2>
     <h4>Stevens Point - Portage County</h4>
+    <img class="locimageside" src="~/images/locations/boyscoutlane2.jpg" alt="placeholder image">
     <p>In the mid 1900s a group of Boy Scouts were killed while on a camping trip, which is where the name of the lane came from. There is no concrete reason as to who killed the scouts, some say it was the leader of the scouts, some say that it was the bus driver, and others believe that it was an attack by a predator. These days it is said that the road is now being watched by the spirits of the Boy Scouts that were killed there. Many people have reported the feeling of being watched on the road and others have reported that they have heard children’s laughter in the area.</p>
 </div>
