--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/GrandOperaHouse.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/GrandOperaHouse.cshtml
@@ -3,10 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/grandopera1.jpg" alt="placeholder image">
 </div>
 <div>
     <h2>Grand Opera House</h2>
     <h4>Oshkosh - Winnebago County</h4>
+    <img class="locimageside" src="~/images/locations/grandopera2.jpg" alt="placeholder image">
     <p>The Grand Opera House in Oshkosh is a location that is said to have been haunted for many years, and there have been multiple reports of supernatural sightings throughout the years. A few of the stories shared surrounding the opera house tell of a woman who never made it to the opening night for her performance, a former stage manager who still haunts the opera, and a small child. </p>
 </div>
