--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/MorrisPrattInstitute.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/MorrisPrattInstitute.cshtml
@@ -3,10 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/morrispratt1.jpeg" alt="placeholder image">
 </div>
 <div>
     <h2>Morris Pratt Institute</h2>
     <h4>Milwaukee - Milwaukee County</h4>
+    <img class="locimageside" src="~/images/locations/morrispratt2.jpeg" alt="placeholder image">
     <p>Morris Pratt Institute was built in the 1800s and was created to be an institute devoted to teaching spiritualism. Students were instructed in practices that would supposedly allow them to contact spirits. Near the original building for the Morris Pratt Institiute was a collection of three cemeteries that formed a triangle with each other with a water tower located inside. The entire area inside of this triangle is said to be haunted, and the water tower has been labeled as a witch’s tower. There have been said to be many haunted happens that occur within the triangle. </p>
 </div>
