--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/OldBarabooInn.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/OldBarabooInn.cshtml
@@ -3,10 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/oldbarabooinn1.jpg" alt="placeholder image">
 </div>
 <div>
     <h2>Old Baraboo Inn</h2>
     <h4>Baraboo - Sauk County</h4>
+    <img class="locimageside" src="~/images/locations/oldbarabooinn2.jpg" alt="placeholder image">
     <p>Established in 1864, it was known as the Baraboo Inn and was a tavern and brothel. During the Prohibition, it was turned into a Speak Easy where the normal activities could still be done as well as gambling. The Mob were in charge of all activities. Al Capone was said to frequent the establishment between jobs. Terrible deaths had occurred during these times of the Mob run business. Torture killings and executions were held in the basement for those who committed any crimes from not paying debts to flirting around with the wrong showgirl. Tenants that live in the apartment above the bar have said to see a lady roaming the second floor and have complained to a previous owner about the party noises they hear coming from the first floor. With new management, one can enjoy drinks at the bar while also exploring the paranormal with their tours. </p>
 </div>
