--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/PlainfieldCemetery.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/PlainfieldCemetery.cshtml
@@ -2,12 +2,12 @@
     ViewData["Title"] = "Plainfield Cemetery";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="location">
-    <div>
-    </div>
-    <div>
-        <h2>Plainfield Cemetery</h2>
-        <h4>Plainfield - Waushara County</h4>
-        <p>Location where Ed Gein took his victims from. Plainfield is most notably home to the murderer Ed Gein who was also named the “Butcher of Plainfield”. Ed Gein would rob the graves of the cemetery, stealing body parts with which he crafted items such as clothing and masks. After Gein’s death, he was buried in the same cemetery that he would rob from. Locals in the area continue to report cries calling out from the cemetery which are supposedly the cries of the victims calling out. Other paranormal disturbances reported in the area are faucets turning themselves on, seeing figures in the dark, and just feeling an unsettling presence in the area. </p>
-    </div>
+<div class="container">
+    <img class="locimagemain" src="~/images/locations/plainfieldcemetery1.jpg" alt="placeholder image">
+</div>
+<div>
+  <h2>Plainfield Cemetery</h2>
+  <h4>Plainfield - Waushara County</h4>
+  <img class="locimageside" src="~/images/locations/plainfieldcemetery2.jpg" alt="placeholder image">
+  <p>Location where Ed Gein took his victims from. Plainfield is most notably home to the murderer Ed Gein who was also named the “Butcher of Plainfield”. Ed Gein would rob the graves of the cemetery, stealing body parts with which he crafted items such as clothing and masks. After Gein’s death, he was buried in the same cemetery that he would rob from. Locals in the area continue to report cries calling out from the cemetery which are supposedly the cries of the victims calling out. Other paranormal disturbances reported in the area are faucets turning themselves on, seeing figures in the dark, and just feeling an unsettling presence in the area. </p>
 </div>
