--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -115,6 +115,14 @@ a:hover {
     width: 475px;
     height: 700px;
 }
+.locimagemain{
+    width:700px;
+    height: 500px;
+}
+
+.locimageside{
+    float: right;
+}
 
 #imagebig{
     position: absolute;
@@ -138,7 +146,6 @@ a:hover {
     z-index: 2;
     cursor: pointer;
 } /*This ID is for a window that will let users click on pictures to see them better*/
-
 
 
 
