--- a/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <img class="card-img-top" src="~/images/colbyhead.png" alt="placeholder image">
         <div class="card-body">
             <h5 class="card-title">Colby Witthuhn</h5>
             <p class="card-text">
