--- a/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
@@ -34,8 +34,13 @@
         </button>
     </div>
 </div>
-
+<br />
+<br />
+<div class="container-sm">
+    <h2>Welcome to Spooky Wisconsin</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum eget ligula ut interdum. Mauris id dolor purus. Pellentesque augue arcu, tincidunt a lacus vel, porttitor porta libero. Maecenas neque dolor, cursus vel tristique sed, dapibus nec tortor. Quisque venenatis hendrerit risus, non lacinia ipsum facilisis et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sit amet velit convallis, auctor ipsum nec, pellentesque turpis. Duis nec porta lectus, quis rutrum risus. Phasellus consequat augue sit amet velit efficitur molestie.</p>
+</div>
 <!--Interactive Map-->
-<div>
-
+<div class="container-md">
+    <iframe frameborder=0 style='width:100%;height:500px;' src='//www.zeemaps.com/pub?group=4834618&list=1&x=-90.142917&y=44.646376&z=11'> </iframe>
 </div>
