--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -83,8 +83,7 @@ a:hover {
 
 .slideshow{
     height:600px;
-    width:fit-content;
-    padding-left: 100px;
+    width:100%;
 }
 
 .table tr:nth-child(even) {
