Updated About personal About information

--- a/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
@@ -66,7 +66,7 @@
         <div class="card-body">
             <h5 class="card-title">Kathy Xiong</h5>
             <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+                A fan of Horror games, from ghost hunting to eliminating zombies. A Wisconsinite born and raised Software developer who enjoys video games and technology.
             </p>
         </div>
         <div class="card-footer">
