work on controllers/views

--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             <div class="dropdown-options bg-black">
                                 <a class="nav-link text-light" asp-area="" asp-controller="HauntedEvent" asp-action="Index">Haunted Events</a>
                                 <a class="nav-link text-light" asp-area="" asp-controller="NewsLetter" asp-action="Index">News Letter</a>
-                                <a class="nav-link text-light" asp-area="" asp-controller="Tours" asp-action="Index">Tours</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Tour" asp-action="Index">Tours</a>
                             </div>
                         </li>
                         <li class="nav-item">
