--- a/SDG.SpookyWisconsin.WebUI/Views/Cart/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SDG.SpookyWisconsin.BL.Models.Cart>
+﻿@model SDG.SpookyWisconsin.BL.Models.Cart
 
 @{
     ViewData["Title"] = "Index";
@@ -9,19 +9,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                @Html.DisplayNameFor(model => model.Items[0].MerchName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CustomerId)
+                @Html.DisplayNameFor(model => model.Items[0].Cost)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MerchId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalCost)
+                @Html.DisplayNameFor(model => model.Items[0].ImagePath)
             </th>
             <th></th>
         </tr>
@@ -30,13 +24,7 @@
 @foreach (var item in Model.Items) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MerchId)
+                @Html.DisplayFor(modelItem => item.MerchName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cost)
